# HangThePyMan

./: LICENSE  README.md  pyproject.toml
hangthepyman/: __main__.py  db_connection.py  game.py  the_hangman.py  words.py
hangthepyman/db/: words.db
